web/css/account.css
/* ... */
/*==================================*\
			&MOBILE
\*==================================*/
@media (min-width: 320px)and (max-width:767px){
	span.icon-menu{
		display: none;
	}
	.account-main-page span.icon-menu{
		display: block;
	}
	.backNav{
		display: none;
	}
	.backNav-mobile{
		display: block;
	}
	.backNav-mobile span:first-child {
		float: left;
		 margin-top: 26px;
		padding-left: 20px;
	}
	.backNav-mobile span:nth-child(2) {
		font-family: 'BrandonGrotesque-Bold';
		font-size: 16px;
		color: #353535;
		float: left;
		margin-top: 24px;
		/* padding-left: 0px; */
		margin-left: 13px;
	}
	.account-wrapper{
		width: 90%;
		max-width: 1100px;
	}
	#changecontact-container, #changeemail-container, #changepassword-container {
		float: none;
		margin: 0 auto;
	}
	.sub-content1 , .sub-content2{
		float: none;
		margin: 0px;
	} 
	.account-settings{
		text-align: center;
	}
	.logout{
		display: none;
	}
	#change-email span.body-text-small{
		width: 300px;
	}
	form.form {
		width: 90%;
	}
	#change-contact{
		width: 90%;
	}
	.mobile-logout{
		display: block;
	}
	.user-name-wrapper h2{
		font-size: 16px;
	}
	.account-container{
		margin: 0 auto;
  		max-width: 400px;
	}
  	#editaddress-container
  	{
		width: 90%;
		margin: 0 auto;
		max-width: 400px;
	}
  	.content .address{
  		width: 100% !important;
  	}
  	.address-content{
  		font-family: 'ProximaNova-regular';
		font-size: 15px;
		padding-top: 0px;
		margin-top: -8px;
  	}
  	.button-changeaddress{
  		padding-top: 30px;
  		text-align: center;
  		padding-left: 0px;
  	}
	.account-profpic-container {
		width: 100%;
		float: left;
		text-align: center;
	}
	.small-profile-pic{
		float: none;
	}
	.account-settings li{
		color:#A9D77B;
	}	
	#editaddress-container .content ol li span:last-child,
	#review-container .content ol li span:last-child{
		width: 300px;
	}
	.accordion-subcontent{
		display: block;
	}
	.accordion-subcontent:first-child,.accordion-subcontent:nth-child(2){
		width: 50%;
		float: left;
	}
	.accordion-subcontent:nth-child(3),.accordion-subcontent:nth-child(4){
		width: 100%;
		margin-top: 30px;
		float: left;
	}
	.account-container{
		width: 90%;
		margin-bottom: 20px;
	}
	.receipt-container{
		float: left;
		margin-bottom: 20px;
	}
	.checkout-wrapper{
		display: block;
	}
	.left-wrapper{
		display: block;
		width: 400px;
		max-width: 90%;
		float: none;
		margin: 0 auto;
	}
	.right-wrapper{
		display: block;
		width: 100%;
		max-width: 320px;
		float: none;
		margin: 0 auto;
	}
	.time-container {
		width: 100%;
		float: none;
		margin-bottom: 20px; 
	}
	.delivery-order-container {
		width: 100%;
		border: 1px solid #9B9B9B;
		border-radius: 4px;
		background-color: #fff;
		/*-webkit-box-shadow: 0px 4px 15px -4px rgba(117,117,117,1);
		-moz-box-shadow: 0px 4px 15px -4px rgba(117,117,117,1);
		box-shadow: 0px 4px 15px -4px rgba(117,117,117,1);*/
		margin-bottom: 20px;
		float: left;
	}
	.order-list-header {
		display: none;
	}
	.order-list-items .body-text-small{
		width: 35%;
		margin-right: 2%;
	}
	.quantity-container{
		margin-right: 20px;
	}
	.order-list-container{
		width: 100%;
	}
	.delivery-info{
		width: 100%;
		float: left;
	}
	.payment-info{
		width: 100%;	
	}
	.receipt-container .caption{
		display: none;
	}
	input.popup-input{
		height: 36px;
	}
	#guest-address-info .section3 .forminput-wrapper{
		width: 30.2%;
	}
	.forminput-wrapper .styled-select{
		height: 36px;
	}
	.pay-by-credit-container .forminput-wrapper:nth-child(3) .styled-select {
		background-position: 64px 9px;
	}
	.pay-by-credit-container .forminput-wrapper:nth-child(5) .styled-select {
		background-position: 58px 9px;
	}
	#remove-cart-item {
		width: 13px;
		margin-top: 3px;
		padding-left: 0;
		margin-left:20px;
	}
	.pay-by-credit-container{
		width: 100%;
	}
	form#pay-form,form#credit-card-from{
		padding-bottom: 20px;
	}
	#guest-address-info{
		padding-bottom: 20px;
	}
	.payment-method-container .contents span:last-child{
		left: 30px;
	}
	.payment-method-container .contents{
		padding: 20px 30px;
		width: 100%;
	}
	.payment-method-guest-container{
		padding: 0 20px;
		left: 0;
	}
	..delivery-info-container{
		width: 100%;
	}
	#pay-using-card,#pay-using-paypal{
		display: block;
		float: left;
	}
	.address-container{
		width: 100%;
	}
	.section2 .forminput-wrapper #address-line-1-error{
		bottom: 106px;
	}
	.payment-info .checkout-header{
		padding-left: 6%;
	}
	#pp,#cc,#pp-guest{
		display: none;
	}
	.quantity-container{
		width: 25%;
	}
	form#guest-address-info #address-line-1-error{
		bottom: 104px;
	}
	#add-payment-method-container,#manage-payment-method-container{
		float: none;
		overflow: hidden;
		width: 100%;
	}
	#add-payment-method-container .pay-by-credit-container{
		padding-right:20px; 
	}
	#manage-payment-method-container .saved-card-list{
		width: 100%;
	}
	.addNewPaymentMethod{
		display: block;
	}
	#add-new-paymentmethod{
		display: none;
	}
	.accepted-cards{
		width: 40px;
	}
	.meal-reviews .meal-image{
		width: 100%;
	}
	.meal-rewiew-wrapper .account-header{
		display: none;
	}
	#review-container{
		width: 100%;
		-webkit-box-shadow:none;
		box-shadow:none;
		border:none;
	}
}
  	@media (max-width:400px){
  		.address-content{
  			font-size: 12px;
  		}
  		.content .address{
  			padding-right: 10px;
  		}
  		#editaddress-container .content ol li span:last-child,
  		#review-container .content ol li span:last-child{
  			font-size: 11px;
  		}
  		.btn-large-primary, .btn-large-extended, .btn-large-secondary{
  			min-width: 0px;
  			padding: 0 15px;
  			font-size: 14px;
  		}
  		.button-changeaddress .btn:last-child{
  			margin-left: 2px;
  		}
  		.checkout-time-button {
  			width: 41px;
  		}
  		.body-text-small{
  			font-size: 11px;
  		}
  		#guest-address-info .section3 .forminput-wrapper{
  			width: 29.4%;
  		}
  		.quantity-container{
  			width: 64px;
  		}
  		.order-list-items input{
  			width: 24px;
  		}
	}
	@media (max-width: 1177px){
		.btn-small-secondary {
  			height: 35px !important;
  		}
	}

